# tap-pipedrive

./: .gitignore  README.md  catalog.json  config.json  discovery.json  pyproject.toml  setup.py
.github/workflows/: build.yml  doc.yml
Documents/: How-to-setup.md  Reference.md
tap_pipedrive/: cli.py  exceptions.py  stream.py  tap.py
tap_pipedrive/schemas/: deals.json  deals_summary.json
tap_pipedrive/schemas/recents/: users.json
tap_pipedrive/schemas/recents/dynamic_typing/: deal_details.json  deals.json  notes.json
tap_pipedrive/streams/: __init__.py  dealflow.py  deals.py  deals_summary.py
tap_pipedrive/streams/recents/: __init__.py
tap_pipedrive/streams/recents/dynamic_typing/: __init__.py  deal_details.py  deals.py
tests/: all-streams.json  test_e2e.py
tests/catalogs/: currency.json  deal_products.json  notes.json
tests/requests/: activities.txt  activity_types.txt  currency.txt  deal_details.txt  deals.txt  deals_summary.txt  discovery.txt  filters.txt  notes.txt  organizations.txt  persons.txt  pipelines.txt  products.txt  stages.txt
tests/responses/: activity_types.txt  currency.txt  dealflow.txt  notes.txt
